create books model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.devtools.remote.secret=thisismysecret
 
-spring.datasource.url=jdbc:postgresql://db:5432/student
+#spring.datasource.url=jdbc:postgresql://db:5432/student
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
